<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutParent"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_10sdp"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnDateView"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_85sdp"
        android:background="@drawable/rounded_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Style_TextView_Regular"
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_29"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toTopOf="@+id/tvDay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Style_TextView_Regular"
            android:id="@+id/tvDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:clickable="false"
        style="@style/Style_TextView_Bold"
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:singleLine="true"
        android:text="@string/special"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cnDateView"
        app:layout_constraintTop_toTopOf="parent"
       />

    <androidx.appcompat.widget.AppCompatTextView
        android:clickable="false"
        style="@style/Style_TextView_Medium"
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:background="@drawable/borderd_bg"
        android:singleLine="true"
        android:text="@string/work"
        android:paddingHorizontal="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cnDateView"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:clickable="false"
        style="@style/Style_TextView_Medium"
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:singleLine="true"
        android:text="@string/hello_i_would_like_to_take_out_something"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cnDateView"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />
</androidx.constraintlayout.widget.ConstraintLayout>